# tolaria

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/actions/: Cargo.toml
crates/actions/assets/: default.json
crates/actions/src/: lib.rs
crates/ai_panel/: Cargo.toml
crates/ai_panel/src/: lib.rs
crates/banners/: Cargo.toml
crates/banners/src/: lib.rs
crates/breadcrumb_bar/: Cargo.toml
crates/breadcrumb_bar/src/: lib.rs
crates/diff_view/: Cargo.toml
crates/diff_view/src/: lib.rs
crates/editor_bridge/: Cargo.toml
crates/editor_bridge/src/: lib.rs
crates/embed_poc/: Cargo.toml  README.md  RESULTS.md
crates/embed_poc/assets/: test-page.html
crates/embed_poc/scripts/: qa-cmd-s.sh  qa-focus.sh  qa-frame-sync.sh  qa-ime.sh  qa.sh
crates/embed_poc/scripts/lib/: common.sh
crates/embed_poc/src/: layout.rs  main.rs  menus.rs  webview.rs
crates/filter_builder/: Cargo.toml
crates/filter_builder/src/: lib.rs
crates/folder_tree/: Cargo.toml
crates/folder_tree/src/: lib.rs
crates/frontmatter_panel/: Cargo.toml
crates/frontmatter_panel/src/: lib.rs
crates/inspector_panel/: Cargo.toml
crates/inspector_panel/src/: lib.rs
crates/mock_fixtures/: Cargo.toml
crates/mock_fixtures/src/: ai.rs  git.rs  lib.rs  search.rs  settings.rs  vault.rs
crates/note_item/: Cargo.toml
crates/note_item/src/: lib.rs  note_toolbar.rs
crates/note_list_pane/: Cargo.toml
crates/note_list_pane/src/: lib.rs
crates/note_retargeting/: Cargo.toml
crates/note_retargeting/src/: lib.rs
crates/onboarding_prompts/: Cargo.toml
crates/onboarding_prompts/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/periscope/: Cargo.toml  README.md
crates/periscope/src/: capture.rs  input.rs  keyboard.rs  lib.rs  tree_dump.rs  windows.rs
crates/periscope/tests/: harness.sh  periscope-phase-8-sweep.sh  screenshot_smoke.rs
crates/raw_editor/: Cargo.toml
crates/raw_editor/src/: lib.rs
crates/rendering_primitives/: Cargo.toml
crates/rendering_primitives/src/: lib.rs
crates/search_panel/: Cargo.toml
crates/search_panel/src/: lib.rs
crates/settings_panel/: Cargo.toml
crates/settings_panel/src/: lib.rs
crates/settings_store/: Cargo.toml
crates/settings_store/src/: lib.rs
crates/sidebar_panel/: Cargo.toml
crates/sidebar_panel/src/: lib.rs
crates/status_bar/: Cargo.toml
crates/status_bar/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs  palette.rs
crates/toasts/: Cargo.toml
crates/toasts/src/: lib.rs
crates/toc_panel/: Cargo.toml
crates/toc_panel/src/: lib.rs
crates/tolaria/: Cargo.toml
crates/tolaria/src/: inspector.rs  inspector_renderer.rs  main.rs  menus.rs  open_note.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  overlay_tooltip.rs  picker.rs  tree_dump.rs
crates/vault/: Cargo.toml
crates/vault/src/: frontmatter.rs  lib.rs  watcher.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: dock.rs  item.rs  lib.rs  mock_note_item.rs  modal_layer.rs  pane.rs  pane_group.rs  panel.rs  title_bar.rs  toast_layer.rs  workspace.rs
crates/workspace_switcher/: Cargo.toml
crates/workspace_switcher/src/: lib.rs
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  GETTING-STARTED.md
docs/adr/: 0115-native-gpui-chrome.md  README.md
docs/plans/: README.md  phase-2d-next.md  wkwebview-seamless-resize-followup.md  wkwebview-seamless-resize.md
docs/plans/native-gpui-chrome/: 00-overview.md  README.md  components.md  e2e-harness.md  eval-gpui-component-removal.md  periscope-phase-8-sweep.md  phase-2d-next.md  phase-8-issues.md  phase-8-sweep.md  process.md  progress.md  roadmap.md  tree-dump-ids.md  visual-issues.md  zed-title-bar-analysis.md
editor-host/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
editor-host/src/: EditorApp.headings.test.ts  EditorApp.routing.test.tsx  EditorApp.tsx  RawEditorFindBar.test.tsx  RawEditorFindBar.tsx  RawEditorView.behavior.test.tsx  RawEditorView.test.tsx  RawEditorView.tsx  blockNoteChecklist.regression.test.ts  blockNoteCodeBlockControl.regression.test.ts  blockNoteCopyCompatibility.regression.test.ts  blockNoteCursorTarget.test.ts  blockNoteCursorTarget.ts  blockNoteFormattingToolbarHoverGuard.extra.test.ts  blockNoteFormattingToolbarHoverGuard.test.ts  blockNoteFormattingToolbarHoverGuard.ts  blockNotePopover.regression.test.ts  blockNoteRenderRecovery.test.ts  blockNoteRenderRecovery.ts  blockNoteSideMenuHoverGuard.test.ts  blockNoteSideMenuHoverGuard.ts  blockNoteTableHandles.regression.test.ts  bridge.test.ts  bridge.ts  compactMarkdown.test.ts  compactMarkdown.ts  editor.ts  editorBlockRepair.ts  editorFind.test.ts  editorFind.ts  editorFocusUtils.ts  editorModePosition.ts  frontmatter.test.ts  frontmatter.ts  imeCompositionKeyGuardExtension.test.ts  imeCompositionKeyGuardExtension.ts  linkActivation.test.tsx  linkActivation.ts  main.ts  main.tsx  (+37 more)
editor-host/src/extensions/: frontmatterHighlight.test.ts  frontmatterHighlight.ts  markdownHighlight.test.ts  markdownHighlight.ts  zoomCursorFix.ts  (+3 more)
scripts/: periscope-phase-8-sweep.sh
src/: App.tsx  main.tsx
src-tauri/src/: ai_agents.rs  claude_cli.rs  cli_agent_runtime.rs  codex_cli.rs  kiro_cli.rs  lib.rs  mcp.rs  menu.rs  opencode_cli.rs  opencode_config.rs  opencode_discovery.rs  opencode_events.rs  pi_cli.rs  pi_config.rs  pi_discovery.rs  vault_watcher.rs
src/components/: EditorTheme.css  McpSetupDialog.tsx  codeBlockOptions.ts  editorSchema.tsx  editorSchema.webkit.test.ts
src/hooks/: editorBlockRepair.ts  useAppSave.test.ts  useAppSave.ts  useEditorSave.ts  useEditorSaveWithLinks.ts  useEditorTabSwap.test.ts  useEditorTabSwap.ts  useNoteCreation.extra.test.ts  useNoteCreation.test.ts  useNoteCreation.ts  useVaultLoader.test.ts  useVaultLoader.ts
src/lib/: i18n.ts
src/utils/: codeBlockEnhancements.test.ts  codeBlockEnhancements.ts  propertyTypes.test.ts  propertyTypes.ts  vaultMetadataNormalization.ts
tests/smoke/: editor-code-block-theme.spec.ts  frontmatter-date-picker.spec.ts
(+33 files in other folders)
