[package]
name = "actions"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Action registry and keymap loader for Tolaria (ADR-0115 Phase 1)."

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true
paths = { path = "../paths" }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
