[package]
name = "breadcrumb_bar"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Top-of-pane breadcrumb trail view (ADR-0115 Phase 2b)."

[dependencies]
gpui.workspace = true
gpui-component.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
