[package]
name = "editor_bridge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Typed JSON envelope protocol for native ⇄ embedded editor IPC (ADR-0115 Phase 4-MVP)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vault = { path = "../vault" }
