# Phase 0 spike crate for ADR-0115 (native GPUI chrome + embedded WKWebView).
#
# macOS-only. On other platforms `main` is a stub that exits non-zero so the
# crate still compiles cleanly for CI cross-checks without dragging the
# wry/AppKit graph onto Linux/Windows runners.
#
# Pinning notes (mirrored from the workspace root Cargo.toml so reviewers can
# verify without context-switching). See the workspace Cargo.toml for the
# rationale on why gpui/gpui_platform are pinned via Cargo.lock rather than an
# explicit rev (TL;DR: gpui-component depends on them rev-less and Cargo
# refuses same-source [patch] overrides).
#   - gpui / gpui_platform     → zed-industries/zed `main`
#     (resolved sha at pin time: f2df3f9e18fa3bbbdab20086bd98395c97a46116, 2026-05-17;
#      authoritative sha is whatever the committed Cargo.lock locks to).
#   - gpui-component / gpui-wry → longbridge/gpui-component @ a5268cd640da080d9d383856ee62990dfb23d6f0
#     (HEAD — needed because the upstream `gpui-wry` webview wrapper used by
#     tasks #4 / #5 exists only on HEAD; v0.5.1 lacks it and v0.5.2 is not yet
#     tagged upstream).
#
# `gpui-wry` (package name for `gpui-component/crates/webview`) is intentionally
# NOT yet listed under [dependencies] — task #2 only opens an empty window.
# Task #4 turns it on at the moment we actually need WebViewBuilder.

[package]
name = "embed_poc"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "ADR-0115 Phase 0 spike: native GPUI chrome with an embedded WKWebView editor body."

[[bin]]
name = "embed_poc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
wry.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
