[package]
name = "inspector_panel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Inspector panel for the Tolaria right dock (ADR-0115 Phase 2d)."

[dependencies]
actions = { path = "../actions" }
gpui.workspace = true
gpui-component.workspace = true
mock_fixtures = { path = "../mock_fixtures" }
vault = { path = "../vault" }
workspace = { path = "../workspace" }

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
