[package]
name = "inspector_panel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Inspector panel for the Tolaria right dock (ADR-0115 Phase 2d)."

[dependencies]
actions = { path = "../actions" }
chrono.workspace = true
editor_bridge = { path = "../editor_bridge" }
gpui.workspace = true
gpui-component.workspace = true
log.workspace = true
mock_fixtures = { path = "../mock_fixtures" }
# Worklist 9.3.3 — the panel header strip reuses
# `note_item::note_toolbar::NOTE_TOOLBAR_HEIGHT_PT` so the header sits
# flush with the note toolbar's baseline.  `note_item` depends on
# `workspace`, not on `inspector_panel`, so the edge is acyclic.
note_item = { path = "../note_item" }
vault = { path = "../vault" }
workspace = { path = "../workspace" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
