[package]
name = "mock_fixtures"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono.workspace = true
gpui.workspace = true
thiserror.workspace = true
log.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
vault = { path = "../vault" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
