[package]
name = "note_list_pane"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Note-list pane view for Tolaria (ADR-0115 Phase 2d)."

[dependencies]
actions = { path = "../actions" }
chrono.workspace = true
gpui.workspace = true
gpui-component.workspace = true
log.workspace = true
mock_fixtures = { path = "../mock_fixtures" }
ui = { path = "../ui" }
vault = { path = "../vault" }
workspace = { path = "../workspace" }

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
