[package]
name = "note_retargeting"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Note-rename wikilink ripple preview / confirm dialog (ADR-0115 Phase 8.20, Strand B)."

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
mock_fixtures = { path = "../mock_fixtures" }
vault = { path = "../vault" }
workspace = { path = "../workspace" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
