[package]
name = "onboarding_prompts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "First-run onboarding prompts and telemetry consent dialog (ADR-0115 Phase 8.22, Strand B)."

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
workspace = { path = "../workspace" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
