[package]
name = "periscope"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "ADR-0115 Phase 6-MVP — Rust e2e test harness for observing a running Tolaria app via screenshots."

[[bin]]
name = "periscope"
path = "src/bin/periscope.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true

# macOS-only deps for screen capture (xcap) and Accessibility-API
# window discovery / raise (accessibility crate from
# https://github.com/eiz/accessibility).  Other platforms compile the
# crate down to the cross-platform stub paths in `src/lib.rs`.
[target.'cfg(target_os = "macos")'.dependencies]
xcap = "0.9.4"
accessibility = "0.2.0"
core-foundation = "0.10"
# `core-graphics` lets us synthesize mouse events via `CGEventCreateMouseEvent` +
# `CGEventPost`.  Used by `periscope::click` to drive a real cursor click at a
# given window-relative coordinate so the smoke test can exercise note-open
# flows end-to-end (not just the static window).  No Accessibility API hooks
# into GPUI-drawn controls, so CGEvent is the only realistic input path.
core-graphics = "0.24"

# No dev-dependencies on the tolaria crate: the smoke test invokes
# `cargo build -p tolaria` and execs `target/debug/tolaria` directly,
# which keeps periscope decoupled from the binary's library surface.

[dev-dependencies]
tempfile.workspace = true
