[package]
name = "search_panel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Full-text search panel for the Bottom Dock (ADR-0115 Phase 2d)."

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
mock_fixtures = { path = "../mock_fixtures" }
workspace = { path = "../workspace" }
actions = { path = "../actions" }
note_list_pane = { path = "../note_list_pane" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
