[package]
name = "sidebar_panel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Left-dock sidebar panel chrome view for Tolaria (ADR-0115 Phase 2d)."

[dependencies]
actions = { path = "../actions" }
gpui.workspace = true
gpui-component.workspace = true
mock_fixtures = { path = "../mock_fixtures" }
workspace = { path = "../workspace" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
