[package]
name = "status_bar"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Status-bar chrome view for Tolaria (ADR-0115 Phase 2b)."

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
mock_fixtures = { path = "../mock_fixtures" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
