[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Tolaria-specific UI compounds placeholder (ADR-0115 Phase 1)."

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
anyhow.workspace = true
log.workspace = true
once_cell = "1"
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

# overlay_tooltip.rs uses AppKit primitives (NSWindow / NSPanel) to host
# the tooltip in a PopUp window that beats the WKWebView z-order; the
# crates below are macOS-only and gated accordingly.
[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
raw-window-handle.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
