[package]
name = "vault"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Minimal vault service for Tolaria (ADR-0115 Phase 3-MVP)."

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flume.workspace = true
gpui.workspace = true
log.workspace = true
notify.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror = "1"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["test-support"] }
